--- a/html/style.css
+++ b/html/style.css
@@ -1,8 +1,72 @@
+/* body {
+  background-color: #E0E0E2;
+}
+
+h1 {
+  color: #721817;
+}
 h2 {
-  display: red;
-  padding: 55%;
-  height: 12;
-  background-color: azure;
-  width: 50%;
-  margin: auto;
+  color: #fa9f42;
+  }
+  
+  .center-text {
+    text-align: center;
+  }
+  
+  #logo {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+  
+  h2 span {
+    color: #FA9F42;
+    font-size: 0.75em;
+  }
+  
+  #copyright {
+    padding-top: 12px;
+    font-size: 0.75em;
+  }
+  
+  */
+
+/* ll */
+/* Add a CSS rule for the body element */
+body {
+  background-color: #E0E0E2;
+}
+
+/* Add a CSS rule for the h1 element */
+h1 {
+  color: #721817;
+}
+
+/* Add a CSS rule for the h2 element */
+h2 {
+  color: #721817;
+  }
+  
+  /* Add a CSS rule for the center-text class */
+  .center-text {
+    text-align: center;
+  }
+  
+  /* Add a CSS rule for the HTML element with the id 'logo' */
+  #logo {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+  
+  /* Add a CSS rule for all span elements that are children of h2 elements */
+  h2 span {
+    color: #FA9F42;
+    font-size: 0.75em;
+  }
+  
+  /* Add a CSS rule for the HTML element with the id 'copyright' */
+  #copyright {
+    padding-top: 12px;
+    font-size: 0.75em;
 }
